force-app/main/default/objects/Specification__c/fields/dsManufacturingAssignmentComplete__c.field-meta.xml
<CustomField>
    <fullName>dsManufacturingAssignmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Manufacturing Assignment Compl</label>
    <type>Checkbox</type>
</CustomField>