force-app/main/default/objects/Specification__c/fields/dsMassProduction__c.field-meta.xml
<CustomField>
    <fullName>dsMassProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2 Mass Production</label>
    <type>Checkbox</type>
</CustomField>