force-app/main/default/objects/Specification__c/fields/dsPlantEngineerApproval__c.field-meta.xml
<CustomField>
    <fullName>dsPlantEngineerApproval__c</fullName>
    <label>Secondary Plant Engineer Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Reassign CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>