force-app/main/default/objects/Specification__c/fields/dsPlantEngineerReviewDate__c.field-meta.xml
<CustomField>
    <fullName>dsPlantEngineerReviewDate__c</fullName>
    <inlineHelpText>This is the date/time when the PE sets the Secondary Approval to &apos;Approved&apos;</inlineHelpText>
    <label>Secondary PE Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>