force-app/main/default/objects/Specification__c/fields/dsPlmAcknowledgement__c.field-meta.xml
<CustomField>
    <fullName>dsPlmAcknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2 PLM Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>