force-app/main/default/objects/Specification__c/fields/dsQualificationRemarks__c.field-meta.xml
<CustomField>
    <fullName>dsQualificationRemarks__c</fullName>
    <label>Dual Source Qualification Remarks</label>
    <type>TextArea</type>
</CustomField>