force-app/main/default/objects/Specification__c/fields/dsQualityEngineerApproval__c.field-meta.xml
<CustomField>
    <fullName>dsQualityEngineerApproval__c</fullName>
    <label>Secondary QE Approval / AE Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed - More Information Required</fullName>
            </value>
            <value>
                <fullName>Approved - Requires Plant Eng Approval</fullName>
            </value>
            <value>
                <fullName>Approved - Includes Plant Eng Approval</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Reassign CM</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Customer Responded - QA to Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>