force-app/main/default/objects/Specification__c/fields/dsQualityEngineerReviewDate__c.field-meta.xml
<CustomField>
    <fullName>dsQualityEngineerReviewDate__c</fullName>
    <inlineHelpText>This is the date/time when the Secondary QE Approval is set for the first time</inlineHelpText>
    <label>Secondary QE Review Date/Time</label>
    <type>DateTime</type>
</CustomField>