force-app/main/default/objects/Specification__c/fields/dsReminderCompleted__c.field-meta.xml
<CustomField>
    <fullName>dsReminderCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Completed</label>
    <type>Checkbox</type>
</CustomField>