force-app/main/default/objects/Specification__c/fields/dsRiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>dsRiskAssessment__c</fullName>
    <label>Secondary Risk Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>