force-app/main/default/objects/Specification__c/fields/dsRiskAssessmentComments__c.field-meta.xml
<CustomField>
    <fullName>dsRiskAssessmentComments__c</fullName>
    <label>Secondary Risk Assessment Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>