force-app/main/default/objects/Specification__c/fields/dsRiskAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>dsRiskAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Risk Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>