force-app/main/default/objects/Specification__c/fields/dsRiskOwner__c.field-meta.xml
<CustomField>
    <fullName>dsRiskOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Risk Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specifications3</relationshipName>
    <type>Lookup</type>
</CustomField>