force-app/main/default/objects/Specification__c/fields/dsRiskOwnerApprovalChangeDate__c.field-meta.xml
<CustomField>
    <fullName>dsRiskOwnerApprovalChangeDate__c</fullName>
    <label>Secondary Owner Approval Change Date/Tim</label>
    <type>DateTime</type>
</CustomField>