force-app/main/default/objects/Specification__c/fields/dsRiskOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>dsRiskOwnerRole__c</fullName>
    <formula>IF (ISPICKVAL(dsActualSource__c,&quot;Dual Source&quot;) &amp;&amp; dsManufacturingAssignmentComplete__c, (
IF(Requires_PE_Approval__c &amp;&amp; ISPICKVAL(dsPlantEngineerApproval__c,&quot;&quot;),  
&quot;PE&quot;
,CASE( dsQualityEngineerApproval__c ,
&quot;Reviewed - More Information Required&quot;, &quot;AE&quot;,
&quot;Approved - Requires Plant Eng Approval&quot;, &quot;PE&quot;,
&quot;Approved - Includes Plant Eng Approval&quot;, &quot;&quot;,
&quot;Not Approved&quot;, &quot;&quot;,
&quot;Reassign CM&quot;, &quot;&quot;,
&quot;Not Required&quot;, &quot;&quot;,
&quot;Customer Responded - QA to Confirm&quot;, &quot;QA&quot;,
&quot;QA&quot;)
)),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Risk Owner Role</label>
    <type>Text</type>
</CustomField>