force-app/main/default/objects/Specification__c/fields/dsSingleSourceDetails__c.field-meta.xml
<CustomField>
    <fullName>dsSingleSourceDetails__c</fullName>
    <label>Single Source Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>