force-app/main/default/objects/Specification__c/fields/dsSingleSourceReason__c.field-meta.xml
<CustomField>
    <fullName>dsSingleSourceReason__c</fullName>
    <label>Single Source Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dsSource__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo / Testing / Study / Development Purpose</fullName>
            </value>
            <value>
                <fullName>Low Touch Program (Revenue Recognition)</fullName>
            </value>
            <value>
                <fullName>OEM Constraints</fullName>
            </value>
            <value>
                <fullName>Small Volume (IT / Large &lt; 5K / month; HH / Wearable &lt; 50K / month)</fullName>
            </value>
            <value>
                <fullName>Others (Please attach BT Approval Email in the File Section)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>