force-app/main/default/objects/Specification__c/fields/dsSource__c.field-meta.xml
<CustomField>
    <fullName>dsSource__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Source Accepted</fullName>
            </value>
            <value>
                <fullName>Single Source Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>