force-app/main/default/objects/Specification__c/fields/dsSourceChangedComments__c.field-meta.xml
<CustomField>
    <fullName>dsSourceChangedComments__c</fullName>
    <label>Source Changed Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>