force-app/main/default/objects/Specification__c/fields/dsSourceChangedReason__c.field-meta.xml
<CustomField>
    <fullName>dsSourceChangedReason__c</fullName>
    <label>Source Changed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CM Specialty</fullName>
            </value>
            <value>
                <fullName>CM Capability Limitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>