force-app/main/default/objects/Specification__c/fields/dsStatus__c.field-meta.xml
<CustomField>
    <fullName>dsStatus__c</fullName>
    <label>Secondary CM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Manufacturer Assignment</fullName>
            </value>
            <value>
                <fullName>Risk Assessment</fullName>
            </value>
            <value>
                <fullName>CM Cost Assessment</fullName>
            </value>
            <value>
                <fullName>Cost Assessment Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>