force-app/main/default/objects/Specification__c/fields/dsStatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>dsStatusChangeDate__c</fullName>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>