force-app/main/default/objects/Specification__c/fields/engAvailableStart__c.field-meta.xml
<CustomField>
    <fullName>engAvailableStart__c</fullName>
    <label>Eng Available Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>