force-app/main/default/objects/Specification__c/fields/engCost__c.field-meta.xml
<CustomField>
    <fullName>engCost__c</fullName>
    <label>Total Eng Cost</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>