force-app/main/default/objects/Specification__c/fields/engineeringInputReceived__c.field-meta.xml
<CustomField>
    <fullName>engineeringInputReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Input Received</label>
    <type>Checkbox</type>
</CustomField>