force-app/main/default/objects/Specification__c/fields/engRescourceDays__c.field-meta.xml
<CustomField>
    <fullName>engRescourceDays__c</fullName>
    <label>Eng Resource Days</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>