force-app/main/default/objects/Specification__c/fields/enteredFromNPI__c.field-meta.xml
<CustomField>
    <fullName>enteredFromNPI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field will be available until 31 AUG 17. Specifications entered will be transferred to PRICING ASSIGNMENT where PLM will review, set and approve pricing. Specifications must include appropriate files and be submitted for approval. Reopened 10 SEP 17 1am.</inlineHelpText>
    <label>Entered from NPI</label>
    <type>Checkbox</type>
</CustomField>