force-app/main/default/objects/Specification__c/fields/estimatedCrateSheetCount__c.field-meta.xml
<CustomField>
    <fullName>estimatedCrateSheetCount__c</fullName>
    <label>Estimated Crate Sheet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>