force-app/main/default/objects/Specification__c/fields/final2IncrementalGFO__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalGFO__c</fullName>
    <label>Final S2 GFO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>