force-app/main/default/objects/Specification__c/fields/final2IncrementalGlassCostNoYL__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalGlassCostNoYL__c</fullName>
    <label>Final S2 Glass Cost w/o YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>