force-app/main/default/objects/Specification__c/fields/final2IncrementalGlassCostRoof1__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalGlassCostRoof1__c</fullName>
    <label>Final S2 Glass Cost Roof 1YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>