force-app/main/default/objects/Specification__c/fields/final2IncrementalProcessFeeRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalProcessFeeRoofTwo__c</fullName>
    <label>Final S2 Process Fee Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>