force-app/main/default/objects/Specification__c/fields/final2IncrementalRoofOne__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalRoofOne__c</fullName>
    <label>Final S2 Roof 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>