force-app/main/default/objects/Specification__c/fields/final2IncrementalTransportation__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalTransportation__c</fullName>
    <label>Final S2 Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>