force-app/main/default/objects/Specification__c/fields/final2IncrementalYieldRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>final2IncrementalYieldRoofTwo__c</fullName>
    <label>Final S2 Yield Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>