force-app/main/default/objects/Specification__c/fields/Final_Margin2__c.field-meta.xml
<CustomField>
    <fullName>Final_Margin2__c</fullName>
    <formula>IF(ISBLANK(currentPrice1__c),1 - ( finalIncrementalTCO__c /  price1__c ) ,1 - (finalIncrementalTCO__c / currentPrice1__c))</formula>
    <label>Final Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>