force-app/main/default/objects/Specification__c/fields/Final_S1_Processing_Fee_Roof_2YL__c.field-meta.xml
<CustomField>
    <fullName>Final_S1_Processing_Fee_Roof_2YL__c</fullName>
    <label>Final S1 Process Fee Roof 2YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>