force-app/main/default/objects/Specification__c/fields/finalBusinessCaseComplete__c.field-meta.xml
<CustomField>
    <fullName>finalBusinessCaseComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Business Case Complete</label>
    <type>Checkbox</type>
</CustomField>