force-app/main/default/objects/Specification__c/fields/finalCMCostAssessmentApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>finalCMCostAssessmentApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>S1 Final CM Cost Assessment Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specifications1</relationshipName>
    <type>Lookup</type>
</CustomField>