force-app/main/default/objects/Specification__c/fields/finalIncrementalGFO__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalGFO__c</fullName>
    <label>Final S1 GFO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>