force-app/main/default/objects/Specification__c/fields/finalIncrementalGlassCostNoYL__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalGlassCostNoYL__c</fullName>
    <label>Final S1 Glass Cost w/o YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>