force-app/main/default/objects/Specification__c/fields/finalIncrementalGlassCostRoof1__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalGlassCostRoof1__c</fullName>
    <label>Final S1 Glass Cost Roof 1YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>