force-app/main/default/objects/Specification__c/fields/finalIncrementalProcessFeeRoofOne__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalProcessFeeRoofOne__c</fullName>
    <label>Final S1 Process Fee Roof 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>