force-app/main/default/objects/Specification__c/fields/finalIncrementalProcessFeeRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalProcessFeeRoofTwo__c</fullName>
    <label>Final S1 Process Fee Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>