force-app/main/default/objects/Specification__c/fields/finalIncrementalRoofOne__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalRoofOne__c</fullName>
    <label>Final S1 Roof 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>