force-app/main/default/objects/Specification__c/fields/finalIncrementalTCO__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalTCO__c</fullName>
    <label>Final S1 TCO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>