force-app/main/default/objects/Specification__c/fields/finalIncrementalTransportation__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalTransportation__c</fullName>
    <label>Final S1 Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>