force-app/main/default/objects/Specification__c/fields/finalIncrementalTransportationS2__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalTransportationS2__c</fullName>
    <label>Source 2 Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>