force-app/main/default/objects/Specification__c/fields/finalIncrementalYieldRoofOne__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalYieldRoofOne__c</fullName>
    <label>Final S1 Yield Roof 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>