force-app/main/default/objects/Specification__c/fields/finalIncrementalYieldRoofOneS2__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalYieldRoofOneS2__c</fullName>
    <label>Source 2 Yield Roof 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>