force-app/main/default/objects/Specification__c/fields/finalIncrementalYieldRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalYieldRoofTwo__c</fullName>
    <label>Final S1 Yield Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>