force-app/main/default/objects/Specification__c/fields/finalIncrementalYieldRoofTwoS2__c.field-meta.xml
<CustomField>
    <fullName>finalIncrementalYieldRoofTwoS2__c</fullName>
    <label>Source 2 Yield Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>