force-app/main/default/objects/Specification__c/fields/finalMargin__c.field-meta.xml
<CustomField>
    <fullName>finalMargin__c</fullName>
    <label>Final Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>