force-app/main/default/objects/Specification__c/fields/finalTCO__c.field-meta.xml
<CustomField>
    <fullName>finalTCO__c</fullName>
    <label>Final TCO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>