force-app/main/default/objects/Specification__c/fields/Finance_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Finance_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Review Complete</label>
    <type>Checkbox</type>
</CustomField>