force-app/main/default/objects/Specification__c/fields/Follow_Corning_Standard__c.field-meta.xml
<CustomField>
    <fullName>Follow_Corning_Standard__c</fullName>
    <description>Not specified items follow Corning standard?</description>
    <inlineHelpText>Not specified items follow Corning standard?</inlineHelpText>
    <label>Not Specified Items?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow Corning Standard</fullName>
            </value>
            <value>
                <fullName>Review by CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>