force-app/main/default/objects/Specification__c/fields/fps__c.field-meta.xml
<CustomField>
    <fullName>fps__c</fullName>
    <label>FPS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>