force-app/main/default/objects/Specification__c/fields/Fully_Burdened_Cost_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Fully_Burdened_Cost_Per_Day__c</fullName>
    <label>Fully Burdened Cost Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>