force-app/main/default/objects/Specification__c/fields/function__c.field-meta.xml
<CustomField>
    <fullName>function__c</fullName>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>