force-app/main/default/objects/Specification__c/fields/generalComments__c.field-meta.xml
<CustomField>
    <fullName>generalComments__c</fullName>
    <label>General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>