force-app/main/default/objects/Specification__c/fields/GG_VNDExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>GG_VNDExchangeRate__c</fullName>
    <description>Exchange rate got from where the opportunity was created</description>
    <formula>opportunity__r.GG_VNDExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP VND Locked Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>