force-app/main/default/objects/Specification__c/fields/Glass_Code__c.field-meta.xml
<CustomField>
    <fullName>Glass_Code__c</fullName>
    <formula>Left(Text(glassComposition__c),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Glass Code</label>
    <type>Text</type>
</CustomField>