force-app/main/default/objects/Specification__c/fields/glassCeramics__c.field-meta.xml
<CustomField>
    <fullName>glassCeramics__c</fullName>
    <label>Glass Ceramics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>