force-app/main/default/objects/Specification__c/fields/glassComposition__c.field-meta.xml
<CustomField>
    <fullName>glassComposition__c</fullName>
    <label>Glass Composition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlassComposition</valueSetName>
    </valueSet>
</CustomField>