force-app/main/default/objects/Specification__c/fields/inChargeRole__c.field-meta.xml
<CustomField>
    <fullName>inChargeRole__c</fullName>
    <formula>CASE( status__c , 
&quot;New&quot;, &quot;AM &amp; AE&quot;, 
&quot;Missing Information Assessment&quot;, &quot;WWPE&quot;, 
&quot;Capable Assessment&quot;, &quot;WWPE&quot;, 
&quot;Standard Assessment&quot;, &quot;WWPE&quot;, 
&quot;Manufacturer Assignment&quot;, &quot;Planner&quot;, 
&quot;Risk Assessment&quot;, &quot;QA, Plant Engineer and AE&quot;, 
&quot;CM Cost Assessment&quot;, &quot;Finance and Cost Manager&quot;, 
&quot;Pricing Assignment&quot;, &quot;PLM&quot;, 
&quot;Pricing Approved&quot;, &quot;AM&quot;, 
&quot;Supply, Allocation, and Inventory Review&quot;, &quot;Demand Ops&quot;,
&quot;Product Engineering Input&quot;, &quot;Product Engineering&quot;,
&quot;Plant Engineering Input&quot;, &quot;Plant Engineering&quot;,
&quot;Supply Chain Input&quot;, &quot;Supply Chain&quot;,
&quot;Business Case Finalization&quot;, &quot;PLM&quot;,
&quot;Commercial/Ops Review&quot;, &quot;Demand Ops &amp; Regional Management&quot;,
&quot;&quot;)</formula>
    <label>In Charge Role</label>
    <type>Text</type>
</CustomField>