force-app/main/default/objects/Specification__c/fields/includeCorningPackaging__c.field-meta.xml
<CustomField>
    <fullName>includeCorningPackaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Corning Packaging?</label>
    <type>Checkbox</type>
</CustomField>