force-app/main/default/objects/Specification__c/fields/includeCorningPacking__c.field-meta.xml
<CustomField>
    <fullName>includeCorningPacking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Corning Packing</label>
    <type>Checkbox</type>
</CustomField>