force-app/main/default/objects/Specification__c/fields/incrementalGFO__c.field-meta.xml
<CustomField>
    <fullName>incrementalGFO__c</fullName>
    <label>Source 1 GFO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>