force-app/main/default/objects/Specification__c/fields/incrementalGFOS2__c.field-meta.xml
<CustomField>
    <fullName>incrementalGFOS2__c</fullName>
    <label>Source 2 GFO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>