force-app/main/default/objects/Specification__c/fields/incrementalGlassCostNoYL__c.field-meta.xml
<CustomField>
    <fullName>incrementalGlassCostNoYL__c</fullName>
    <label>Source 1 Glass Cost w/o YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>