force-app/main/default/objects/Specification__c/fields/incrementalGlassCostNoYLS2__c.field-meta.xml
<CustomField>
    <fullName>incrementalGlassCostNoYLS2__c</fullName>
    <label>Source 2 Glass Cost w/o YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>