force-app/main/default/objects/Specification__c/fields/incrementalGlassCostRoof1S2__c.field-meta.xml
<CustomField>
    <fullName>incrementalGlassCostRoof1S2__c</fullName>
    <label>Source 2 Glass Cost Roof 1YL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>