force-app/main/default/objects/Specification__c/fields/incrementalGlassCostYL01__c.field-meta.xml
<CustomField>
    <fullName>incrementalGlassCostYL01__c</fullName>
    <label>Incremental Glass Cost (YL 01)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>