force-app/main/default/objects/Specification__c/fields/incrementalGlassCostYL02__c.field-meta.xml
<CustomField>
    <fullName>incrementalGlassCostYL02__c</fullName>
    <label>Incremental Glass Cost (YL 02)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>