force-app/main/default/objects/Specification__c/fields/incrementalLCCMOne__c.field-meta.xml
<CustomField>
    <fullName>incrementalLCCMOne__c</fullName>
    <label>Incremental LC CM #1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>