force-app/main/default/objects/Specification__c/fields/incrementalProcessFeeLCCMOne__c.field-meta.xml
<CustomField>
    <fullName>incrementalProcessFeeLCCMOne__c</fullName>
    <label>Incremental Process Fee (LC CM #1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>