force-app/main/default/objects/Specification__c/fields/incrementalProcessFeeLCCMTwo__c.field-meta.xml
<CustomField>
    <fullName>incrementalProcessFeeLCCMTwo__c</fullName>
    <label>Incremental Process Fee (LC CM #2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>